slique.css
/* ... */
        .commentarea .usertext-buttons button:hover {
            background: rgba(0,0,0,0.15);
        }
        .commentarea .usertext-buttons button:active {
            background: rgba(0,0,0,0.25);
        }

    .panestack-title {
        border-bottom: 1px solid #DDD;
        text-transform: capitalize;
        text-align: center;
        width: 75%;
        margin: 0 auto;
    }
        .panestack-title .title {
            font-size: 18px;
            font-weight: 100;
        }
    .commentarea .menuarea {
        margin: 12px 0 0 0;
        font-weight: 100;
        text-align: center;
        display: block;
        overflow: visible;
    }
        .commentarea .loadFlat {
            margin-left: 12px;
        }
        .commentarea #REScommentSubToggle {
            padding: 4px 12px;
            border-radius: 0px;
            background: #FAFAFA;
            transition: background 0.2s;
            color: #666;
            font-weight: normal;
        }
            .commentarea #REScommentSubToggle:hover {
                background: #DDD;
            }
        .commentarea .menuarea > .spacer:first-child {
            display: block;
            height: 35px;
        }
        .commentarea .menuarea .toggle .togglebutton,
        .commentarea #REScommentNavToggle [id^='nav']{
            font-size: 12px;
            font-weight: normal;
            text-transform: capitalize;
            transition: color 0.15s;
        }
            .commentarea .menuarea .toggle .togglebutton:hover,
            .commentarea #REScommentNavToggle [id^='nav']:hover {
                color: black;
            }



        .menuarea .dropdown-title:first-letter {
            text-transform: uppercase;
        }
        .menuarea .dropdown-title {

        }
        .menuarea .dropdown {
            text-transform: uppercase;
            border: 1px solid #DDD;
            margin-left: 4px;
            padding: 5px;
            padding-left: 12px;
            text-decoration: none;
            transition: background 0.2s;
            background: rgba(0,0,0,0.1);
        }
        .menuarea .dropdown:hover {
            background: rgba(0,0,0,0.2);
            cursor: pointer;
        }
            .menuarea .dropdown .selected {
                text-decoration: none;
                font-weight: normal;
            }
        .menuarea .drop-choices {
            margin-top: 14px;
            background: transparent;
        }
            .menuarea .drop-choices > *:first-child {
                border-top-left-radius: 2px;
                border-top-right-radius: 2px;
            }
            .menuarea .drop-choices > *:last-child {
                border-bottom-right-radius: 2px;
                border-bottom-left-radius: 2px;
            }
            .menuarea .drop-choices a {
                background: rgba(60,60,60,0.9);
                padding: 6px 24px;
                color: #EEE;
                text-transform: capitalize;
                text-align: left
            }
            .menuarea .drop-choices a:hover {
                background: rgba(60,60,60,0.95);
            }

    /* Parent Comments */
    .commentarea > .sitetable > .comment {
        background: #FAFAFA;
        padding: 12px;
        border-radius: 2px;
        margin: 16px 0;
    }
        .commentarea .tagline {}
            .commentarea .tagline > * {
                vertical-align: middle;
            }
            .commentarea .tagline .author {
                font-size: 12px;
                font-weight: normal;
            }
            .commentarea .tagline .submitter {
                color: #af882a;
            }
        .commentarea .comment .child {
            border: none;
        }
        .commentarea .comment {
            border-left: 2px solid #bcc5cc;
        }
            .comment .tagline {
                font-size: 10px;
            }
                .comment .tagline time::after {
                    display: none;
                }

    .commentarea blockquote {
        color: #777;
    }
    .commentarea .expand {
        font-weight: bold;
        font-size: 10px;
    }





.footer-parent {
    position: absolute;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 300px;
}
    .footer-parent .footer {
        border-radius: 0px;
        border: 1px solid #BBB;
        background: rgba(255,255,255,0.1);
    }
        .footer .col {
            border-color: #666;
        }
            .footer .col .title {
                color: #CCC;
                text-transform: uppercase;
                font-weight: 100;
                font-size: 14px;
                text-align: center;
                padding-bottom: 4px;
                margin-bottom: 10px;
                border-bottom: 1px solid #777;
            }
            .footer a:first-letter {
                text-transform: uppercase;
            }
            .footer a {
                color: #7D92B3;
            }
            .footer a:visited {
                color: #A27DB3;
            }
            .footer a.buygold {
                font-weight: normal;
            }

/* Submit Page Styles */

.submit-page div.content {
    text-align: center;
    padding-top: 34px;
    padding-bottom: 34px;
}
    .submit-page .content .md {
        color: #666;
    }
    .submit-page div.content input,
    .submit-page div.content textarea {
        border: 1px solid #DFDFDF;
        font-size: 16px;
        text-align: center;
    }
    .submit-page div.content > h1 {
        border-bottom: 1px solid #DDD;
        padding-bottom: 4px;
        font-size: 30px;
        font-weight: 100;
        text-transform: capitalize;
        width: 95%;
        margin: 0px auto 10px auto;
    }
    .submit-page div.content form.content {
        margin: 0px;
        width: 100%;
        max-width: 700px;
        display: inline-block;
    }
/* ... */

